Fixed imgur gifv not showing because of throttling. Custom column implementation to avoid objects sliding from the bottom left to top right.

--- a/Main.css
+++ b/Main.css
@@ -1,18 +1,11 @@
 #container {
     margin: auto;
-
-    -webkit-column-count:2;
-    -moz-column-count:2;
-    column-count:2;
-
-    -webkit-column-gap: 0px; /* Chrome, Safari, Opera */
-    -moz-column-gap: 0px; /* Firefox */
-    column-gap: 0px;
 }
 
 .item {
     background: #ddd;
     width: 100%;
+    display: block; /* as opposed to inline-block which leaves a small vertical gap*/
 }
 
 #header {
@@ -23,5 +16,9 @@
 }
 
 .placeHolder {
+}
+
+.column {
+    float: left;
     width: 50%;
 }
